--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <h1>Welcome to Henry Le's Webpage!</h1>
-  <img src="20191029_172721_psd.jpg" 
+  <img src="ProfilePic.jpg" 
     alt="I'm just temporarily hiding!" 
     style="width:200px;height:150px;">
   <p>I'm a geek with big glasses</p>
