--- a/index.html
+++ b/index.html
@@ -13,15 +13,39 @@
   <p>I'm a geek with big glasses</p>
   <p>I like to work more than to eat - kinda like workalholic </p>
 
+  <ul>
+    <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
+    <li><strong>Github:</strong> <a href="#">sampleName</a></li>
+    <li><strong>Twitter:</strong> <a href="#">coming soon</a></li>
+  </ul>
 
+  <table>
+    <tr>
+      <th>Books</th>
+      <th>Movies</th>
+      <th>Games</th>
+    </tr>
+    <tr>
+      <td>The Hobbit</td>
+      <td>The Proposal</td>
+      <td>Tomb Raider</td>
+    </tr>
+    <tr>
+      <td>The Name of the Wind</td>
+      <td>The Avengers</td>
+      <td>Final Fantasy</td>
+    </tr>
+    <tr>
+      <td>The Girl With the Dragon Tatoo</td>
+      <td>The Matrix</td>
+      <td>God of War</td>
+    </tr>
+  </table>
 
-
-
-
-
-
-
+  <!-- Bonus link to last class page -->
+  <!-- <a href="../../../../1/Activities/04-Stu_MyFirst_HTML/Solved/my-first-bonus.html">My First HTML Bonus</a> -->
 
 </body>
 
 </html>
+
